--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/rapier": "^2.1.0",
     "gray-matter": "^4.0.3",
     "next": "16.0.1",
+    "prism-react-renderer": "^2.4.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-markdown": "^10.1.0",
