--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/rapier": "^2.1.0",
     "cn": "^0.1.1",
     "gray-matter": "^4.0.3",
+    "katex": "^0.16.25",
     "next": "16.0.1",
     "prism-react-renderer": "^2.4.1",
     "react": "19.2.0",
@@ -21,12 +22,14 @@
     "react-markdown": "^10.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-autolink-headings": "^7.0.1",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
     "remark-slug": "^7.0.1",
