--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cn": "^0.1.1",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.25",
+    "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "prism-react-renderer": "^2.4.1",
     "react": "19.2.0",
