--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@react-three/rapier": "^2.1.0",
+    "@vercel/analytics": "^1.5.0",
     "cn": "^0.1.1",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.25",
