--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/rapier": "^2.1.0",
     "@vercel/analytics": "^1.5.0",
     "cn": "^0.1.1",
+    "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.25",
     "lucide-react": "^0.552.0",
